--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.21'
 }
 
 apply from: "$project.rootDir/buildConfig/buildConfig.gradle"
@@ -120,6 +121,14 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+
+    implementation "io.ktor:ktor-client-okhttp:2.3.1"
+    implementation "io.ktor:ktor-client-logging:2.3.1"
+    implementation "io.ktor:ktor-client-resources:2.3.1"
+    implementation "io.ktor:ktor-client-content-negotiation:2.3.1"
+    implementation "io.ktor:ktor-serialization-kotlinx-json:2.3.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 
     implementation "io.insert-koin:koin-androidx-compose:3.2.0"
