add visual representation of characters

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 
+    implementation "io.coil-kt:coil-compose:2.1.0"
+
     implementation "io.ktor:ktor-client-okhttp:2.3.1"
     implementation "io.ktor:ktor-client-logging:2.3.1"
     implementation "io.ktor:ktor-client-resources:2.3.1"
