--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,6 +109,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation "androidx.paging:paging-compose:3.2.0-beta01"
+    testImplementation "androidx.paging:paging-testing:3.2.0-beta01"
 
     implementation "androidx.appcompat:appcompat:1.6.1"
     implementation "androidx.core:core-ktx:1.10.1"
@@ -130,12 +131,18 @@ dependencies {
     implementation "io.ktor:ktor-client-resources:2.3.1"
     implementation "io.ktor:ktor-client-content-negotiation:2.3.1"
     implementation "io.ktor:ktor-serialization-kotlinx-json:2.3.1"
+    testImplementation "io.ktor:ktor-client-mock:2.3.1"
+
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 
     implementation "io.insert-koin:koin-androidx-compose:3.2.0"
+    testImplementation "io.insert-koin:koin-test-junit4:3.4.1"
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test-jvm:1.6.4"
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
