--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,6 +116,7 @@ dependencies {
 
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.30.1"
     implementation "com.google.accompanist:accompanist-flowlayout:0.30.1"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.30.1"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
